tests/baselines/reference/variadicTuples3.errors.txt
variadicTuples3.ts(5,3): error TS2322: Type 'any[]' is not assignable to type '[...T, ...P]'.
  Source provides no match for variadic element at position 0 in target.
variadicTuples3.ts(10,3): error TS2322: Type '[any, any]' is not assignable to type '[...T, ...P]'.
  Source provides no match for variadic element at position 0 in target.
variadicTuples3.ts(15,3): error TS2322: Type '[any, any, any]' is not assignable to type '[...T, ...P]'.
  Source provides no match for variadic element at position 0 in target.


==== variadicTuples3.ts (3 errors) ====
    // https://github.com/microsoft/TypeScript/issues/58697
    
    function test1<T extends any[], P extends any[]>(): [...T, ...P] {
      let x: any[] = [];
      return x;
      ~~~~~~
!!! error TS2322: Type 'any[]' is not assignable to type '[...T, ...P]'.
!!! error TS2322:   Source provides no match for variadic element at position 0 in target.
    }
    
    function test2<T extends any[], P extends any[]>(): [...T, ...P] {
      let x: [any, any] = [null, null];
      return x;
      ~~~~~~
!!! error TS2322: Type '[any, any]' is not assignable to type '[...T, ...P]'.
!!! error TS2322:   Source provides no match for variadic element at position 0 in target.
    }
    
    function test3<T extends any[], P extends any[]>(): [...T, ...P] {
      let x: [any, any, any] = [null, null, null];
      return x;
      ~~~~~~
!!! error TS2322: Type '[any, any, any]' is not assignable to type '[...T, ...P]'.
!!! error TS2322:   Source provides no match for variadic element at position 0 in target.
    }
    